--- a/demo-web-lib/src/app/sample.component/sample.component.scss
+++ b/demo-web-lib/src/app/sample.component/sample.component.scss
@@ -1,4 +1,4 @@
-@import "../../../node_modules/material-colors/dist/colors";
+@import "../../../node_modules/material-colors/dist/colors.scss";
 
 h1 {
     color: $md-red-300;
