implement node cli & remove gulp task

--- a/demo-web-lib/src/app/sample.component/sample.component.scss
+++ b/demo-web-lib/src/app/sample.component/sample.component.scss
@@ -1,5 +1,5 @@
-@import "../../../node_modules/material-colors/dist/colors.scss";
+//@import "../../../node_modules/material-colors/dist/colors.scss";
 
 h1 {
-    color: $md-red-300;
+    color: red;
 }
